# bottec_test

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose-ci.yaml  docker-compose.yaml  entrypoint.sh  manage.py  pyproject.toml  start_bot.py  users.json
.github/workflows/: action.yaml
bot/: admin.py  models.py
bot/migrations/: 0001_initial.py  0002_alter_category_options_alter_product_options_and_more.py  0002_faq.py  0003_alter_user_managers_cart.py  0004_alter_cart_options_alter_user_options_product_price.py  0005_alter_product_price.py  0006_remove_cart_product_remove_cart_quantity_and_more.py  0007_remove_product_quantity_cartproduct.py  0008_remove_cart_products_alter_cartproduct_cart.py
bot/tg_bot/: channels.py  filters.py  handlers.py  managers.py  states.py
bot/tg_bot/handlers/: cart.py  categories.py  faq.py  main.py  products.py  shipping.py  sub_categories.py
bot/tg_bot/utils/: db_queries.py  excel_write.py  keyboards.py  paginate.py  payments.py
bottec_test/: asgi.py  settings.py  urls.py  wsgi.py
fixtures/: categories.json  faq.json  products.json  sub_categories.json
