[tool.poetry]
name = "bottec-test"
version = "0.1.0"
description = ""
authors = ["gmoroz <12345hasek@gmail.com>"]
readme = "README.md"
packages = [{include = "bottec_test"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
aiogram = "^2.25.1"
python-dotenv = "^1.0.0"
pillow = "^9.4.0"
psycopg2-binary = "^2.9.5"
uvicorn = "^0.20.0"
yookassa = "^2.3.5"


[tool.poetry.group.dev.dependencies]
mypy = "^1.0.1"
pre-commit = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
